syntax = "proto3";

package service.v1;

option go_package = "unblink/server/gen/service/v1;servicev1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service EventService {
  // Event management
  rpc ListEventsByNodeId(ListEventsByNodeIdRequest) returns (ListEventsByNodeIdResponse);
  rpc CountEventsForUser(CountEventsForUserRequest) returns (CountEventsForUserResponse);
}

// Data structures

message Event {
  string id = 1;
  string service_id = 2;
  google.protobuf.Struct payload = 3;
  google.protobuf.Timestamp created_at = 4;
}

// Request/Response messages

message ListEventsByNodeIdRequest {
  string node_id = 1;
  int32 page_size = 2;      // Number of events per page (default 20, max 100)
  int32 page_offset = 3;    // Offset for pagination (0-based)
}

message ListEventsByNodeIdResponse {
  repeated Event events = 1;
  int32 total_count = 2;    // Total number of events (for client-side pagination UI)
}

message CountEventsForUserRequest {}

message CountEventsForUserResponse {
  int64 count = 1;
}
